# interpreter_gui

./: CMakeLists.txt  README.md  image.qrc  package.xml
Script/: FIRST.rrun  Gazebo.rrun  MoveJ  Script2param.rrun  Script5error.rrun  ScriptGZ.rrun  ScriptGazebo.rrun  ScriptGazebo2.rrun  ScriptWait.rrun  ScriptWait2.rrun  Untitled.rrun  cartesian  cartesian.rrun  firstScript.rrun  firstScript2.rrun  firstScript3.rrun  firstScript5dof.rrun  firstScript6dof.rrun  prueba  prueba.rrun  script_maynor
include/: highlighter.h  mainwindow.h  ui_mainwindow.h
src/: codeeditor.cpp  completelistwidget.cpp  highlighter.cpp  main.cpp  mainwindow.cpp
ui/: mainwindow.ui
